--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 ></path>
               </svg>
             </button>
-            <button data-label="Miniplayer (i)">
+            <button id="mini_player" data-label="Miniplayer (i)">
               <svg height="100%" version="1.1" viewBox="0 0 36 36" width="100%">
                 <use class="ytp-svg-shadow" xlink:href="#ytp-id-20"></use>
                 <path
