--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
               <div class="progress-input"></div>
             </div>
             <div class="time_container">
-              <div id="current-time" class="time">00:00</div>
-              /
-              <div id="total-time" class="time"></div>
+              <span id="current-time" class="time">00:00 </span>
+              <span class="slash">/</span>
+              <span id="total-time" class="time"></span>
             </div>
             <button data-label="Subtitles/closed captions (c)">
               <svg
@@ -301,7 +301,37 @@
         </div>
       </div>
       <div class="play_list_continer">
-        <div class="play_list_title"></div>
+        <div class="play_list_header">
+          <div class="title">
+            <h4>Current Playlist</h4>
+            <div class="tag">
+              <span id="current_video_position"></span>
+              /
+              <span id="total_video"></span>
+            </div>
+          </div>
+          <div class="close">
+            <svg
+              viewBox="0 0 24 24"
+              preserveAspectRatio="xMidYMid meet"
+              focusable="false"
+              class="style-scope yt-icon"
+              style="
+                pointer-events: none;
+                display: block;
+                width: 100%;
+                height: 100%;
+              "
+            >
+              <g class="style-scope yt-icon">
+                <path
+                  d="M12.7,12l6.6,6.6l-0.7,0.7L12,12.7l-6.6,6.6l-0.7-0.7l6.6-6.6L4.6,5.4l0.7-0.7l6.6,6.6l6.6-6.6l0.7,0.7L12.7,12z"
+                  class="style-scope yt-icon"
+                ></path>
+              </g>
+            </svg>
+          </div>
+        </div>
         <ul class="video_lists"></ul>
       </div>
     </div>
