--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <span id="total_video"></span>
             </div>
           </div>
-          <div class="close">
+          <div class="open_close">
             <svg
               viewBox="0 0 24 24"
               preserveAspectRatio="xMidYMid meet"
